--- a/style.css
+++ b/style.css
@@ -1,24 +1,62 @@
 body{
+    height: fit-content;
+    width: auto;
+    margin: 0;
     display: flex;
-    flex: 1;
-    justify-content: center;
     flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Tektur';
     
 }
 
-footer{
-    display: flex;
-    justify-content: center;
-}
 
 .header{
     display: flex;
     justify-content: center;
+    font-family: 'Bungee Spice';
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    height: auto;
 }
 
 .main {
+    height: 700px;
+    width: 700px;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: red;
+    border-radius: 20px;
     border-style: solid;
     border-color: black;   
+}
+.sketch {
+    height: 80%;
+    width: 80%;
+    display: flex;
+    margin-top: 20px;
+    border-style: solid;
+    border-color: black;
+    background-color: rgb(255, 255, 255);
+}
+
+.settings {
+    display: flex;
+    height: 15%;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.button {
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
+
+footer{
+    padding: 8px;
+    text-align: center;
 }
